2003-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ide/Makefile.am: Use dirstamps for preinstallation. Reformat.
	* network/Makefile.am: Ditto.
	* rtc/Makefile.am: Ditto.
	* serial/Makefile.am: Ditto.

2003-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* network/open_eth.c: Remove #define OPEN_ETH_SUPPORTED (Unused).

2003-09-26	Cedric Aubert <cedric_aubert@yahoo.fr>

	PR 499/rtems_misc
	* serial/mc68681.c:  Miscellaneous corrections:
	    - Correction of ACR_BIT[7] (Baudrate table) Configuration
	    - Correction of Parity Bit Configuration (Odd was forced)
	    - Correction of Stop Bit configuration (inversed)
	    - Correction of ISR Handler to call 
  	      rtems_termios_dequeue_character() only if is a Tx Empty IRQ.
	    - Add RTS CTS Hardware flow control Configuration

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* ide/ata.c, ide/ata.h, ide/ata_internal.h, ide/ide_controller.c,
	ide/ide_ctrl.h, ide/ide_ctrl_cfg.h, ide/ide_ctrl_io.h,
	network/cs8900.c, network/cs8900.c.bsp, network/cs8900.h,
	network/dec21140.c, network/elnk.c, network/open_eth.c,
	network/sonic.c, network/sonic.h, rtc/icm7170.c, rtc/icm7170.h,
	rtc/icm7170_reg.c, rtc/icm7170_reg2.c, rtc/icm7170_reg4.c,
	rtc/icm7170_reg8.c, rtc/m48t08.c, rtc/m48t08.h, rtc/m48t08_reg.c,
	rtc/m48t08_reg2.c, rtc/m48t08_reg4.c, rtc/m48t08_reg8.c, rtc/rtc.h,
	rtc/rtcprobe.c, serial/mc68681.c, serial/mc68681.h,
	serial/mc68681_p.h, serial/mc68681_reg.c, serial/mc68681_reg2.c,
	serial/mc68681_reg4.c, serial/mc68681_reg8.c, serial/serial.h,
	serial/z85c30.c, serial/z85c30.h, serial/z85c30_p.h,
	serial/z85c30_reg.c: URL for license changed.

2003-09-03	Jiri Gaisler <jiri@gaisler.com>

	PR 477/networking
	* network/Makefile.am: Add driver for OpenCores NIC.
	* network/README.open_eth, network/open_eth.c, network/open_eth.h:
	New files.

2003-08-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ide/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2003-08-20	Joel Sherrill <joel@OARcorp.com>
