@@ -31,7 +31,7 @@ $(PROJECT_RELEASE)/lib/$(LIBNAME)$(LIB_VARIANT).a: $(LIB)
 TMPINSTALL_FILES += $(PROJECT_RELEASE)/lib/$(LIBNAME)$(LIB_VARIANT).a
 
 if HAS_NETWORKING
-all-local: $(ARCH) $(PREINSTALL_FILES) $(OBJS) $(LIB) $(TMPINSTALL_FILES)
+all-local: $(PREINSTALL_FILES) $(OBJS) $(LIB) $(TMPINSTALL_FILES)
 endif
 endif
 
